Updated blog link

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,7 @@ items:
   - title: Libraries
     link: "#libraries"
   - title: Blog
-    link: https://blog.heinrichreimersoftware.com
+    link: https://blog.heinrichreimer.com
   - title: Google+
     icon: google-plus
     link: https://plus.google.com/+HeinrichReimer
