--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ author:
     city: Braunschweig
     country: Germany
   email: heinrich@heinrichreimer.com
+  telephone: +49 1749273954
 
 meta:
   title: Heinrich Reimer
