Added JekyllRedirectFrom plugin

--- a/_config.yml
+++ b/_config.yml
@@ -17,3 +17,9 @@ meta:
   description: Android development with love.
 
 markdown: kramdown
+
+gems:
+  - jekyll-redirect-from
+
+whitelist:
+  - jekyll-redirect-from
