--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,10 +1,10 @@
 items:
   - title: Home
-    link: "{{site.url}}#home"
+    link: /#home
   - title: Apps
-    link: "{{site.url}}#apps"
+    link: /#apps
   - title: Libraries
-    link: "{{site.url}}#libraries"
+    link: /#libraries
   - title: Blog
     link: https://blog.heinrichreimer.com
   - title: Google+
