--- a/_data/libraries.yml
+++ b/_data/libraries.yml
@@ -1,5 +1,7 @@
 title: Libraries
 button: View it on GitHub
+logo: /res/images/logos/logo_open_source.svg
+
 cta: 
   title: Love open-source?
   description: Never miss a new library.
