--- a/_data/drawer.yml
+++ b/_data/drawer.yml
@@ -1,15 +1,19 @@
 items:
   - title: Home
+    icon: home
     link: /#home
   - title: Apps
+    icon: hardware:phone-android
     link: /#apps
   - title: Libraries
+    icon: mdi:book
     link: /#libraries
 
   - divider: true
 
-  - title: Xing
-    link: /#xing
+  - title: CV
+    icon: mdi:cv
+    link: http://stackoverflow.com/story/heinrich-reimer
     external: true
   - title: Google+
     icon: mdi:google-plus
@@ -18,4 +22,8 @@ items:
   - title: GitHub
     icon: mdi:github-circle
     link: https://github.com/HeinrichReimer
+    external: true
+  - title: Xing
+    icon: mdi:xing
+    link: https://www.xing.com/profile/Heinrich_Reimer3
     external: true
