--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,5 +3,7 @@ items:
     link: /#home
   - title: Apps
     link: /#apps
+  - title: Websites
+    link: /#websites
   - title: Libraries
     link: /#libraries
