Updated meta data

--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,26 @@ author:
     country: Germany
   email: heinrich@heinrichreimer.com
   telephone: +49 1749273954
+  twitter: @Kieselstein000
+  google_plus: +HeinrichReimer
+keywords:
+- Android
+- Development
+- Web
+- Webdesign
+- Consulting
+- Freelancer
+- Heinrich
+- Reimer
+- Apps
+- Libraries
+- Open-Source
+- GitHub
+- Websites
+- Java
+- CSS
+- Markdown
+- User Interface
 
 # Collections of posts
 collections:
