--- a/_config.yml
+++ b/_config.yml
@@ -57,6 +57,11 @@ defaults:
       path: ""
     values:
       layout: page
+defaults:
+  - scope:
+      path: "bower_components"
+    values:
+      sitemap: false
 
 # HTML compressor configurations
 compress_html:
