Improved contact form design

--- a/_data/drawer.yml
+++ b/_data/drawer.yml
@@ -11,6 +11,8 @@ items:
   - title: Libraries
     icon: mdi:book
     link: /#libraries
+  - title: Contact
+    link: /#contact
 
   - divider: true
 
