Improved contact form design

--- a/_data/cover.yml
+++ b/_data/cover.yml
@@ -4,4 +4,4 @@ title: Heinrich Reimer
 subtitle: Android development with love.
 button:
   title: Get in touch
-  link: mailto:heinrich@heinrichreimer.com
+  link: /#contact
