Updated components, renamet asset folder, added Gemfile, added Travis.ci integration

--- a/_data/cover.yml
+++ b/_data/cover.yml
@@ -1,5 +1,5 @@
-image: /res/images/title.jpg
-logo: /res/images/logos/logo_brand.svg
+image: /assets/images/title.jpg
+logo: /assets/images/logos/logo_brand.svg
 title: Heinrich Reimer
 subtitle: Android development with love.
 button:
