--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@
 title: Heinrich Reimer
 description: Android development with love.
 license: All rights reserved.
+logo: /res/images/logos/logo_brand.png
 url: https://heinrichreimer.github.io
 # url: https://heinrichreimer.com # TODO Use in production
 author:
@@ -15,6 +16,10 @@ author:
   telephone: "+49 1749273954"
   twitter: Kieselstein000
   google_plus: HeinrichReimer
+twitter:
+  username: Kieselstein000
+social:
+  name: Heinrich Reimer
   links:
     - https://twitter.com/Kieselstein000
     - https://www.facebook.com/HeinrichReimer
@@ -23,13 +28,6 @@ author:
     - https://www.linkedin.com/in/heinrich-reimer-680877120
     - https://www.xing.com/profile/Heinrich_Reimer3
     - http://stackoverflow.com/users/2037482/heinrich
-image:
-  logo: /assets/images/logos/logo_brand.png
-  # TODO Update images below
-  default: /assets/images/banners/default.png
-  twitter: /assets/images/banners/twitter.png
-  facebook: /assets/images/banners/facebook.png
-  google_plus: /assets/images/banners/facebook.png
 webmaster_verifications:
   google: 5mySK6jpuoQ7RT2vFF-GKGFtb4FWZwxLZ4aBcLwvUdw
   bing: 3653BD8AC68D24520E97C345142CC6FA
@@ -74,6 +72,10 @@ defaults:
       path: ""
     values:
       layout: page
+      image:
+        path: /res/images/banners/default.png
+        twitter: /res/images/banners/twitter.png
+        facebook: /res/images/banners/facebook.png
   - scope:
       path: "/bower_components/"
     values:
@@ -112,6 +114,7 @@ gems:
   - jekyll-avatar
   - jekyll-mentions
   - jekyll-titles-from-headings
+  - jekyll-seo-tag
   - jekyll-redirect-from
   # - jekyll-paginate
   - jekyll-feed
