--- a/.htaccess
+++ b/.htaccess
@@ -4,7 +4,7 @@ RewriteEngine On
 RewriteRule ^(assets/components/(.*))\.html$ $1.min.html [L]
 
 ##Compression
-AddOutputFilterByType DEFLATE text/html text/plain text/xml text/svg text/css application/javascript text/javascript application/json
+AddOutputFilterByType DEFLATE text/html text/plain text/xml image/svg+xml text/css application/javascript text/javascript application/json
 
 ##Cache
 <IfModule mod_expires.c>
@@ -15,6 +15,7 @@ AddOutputFilterByType DEFLATE text/html text/plain text/xml text/svg text/css ap
   ExpiresByType image/jpg "access plus 1 month"
   ExpiresByType image/jpeg "access plus 1 month"
   ExpiresByType image/png "access plus 1 month"
+  ExpiresByType image/svg+xml "access plus 1 month"
 
   ExpiresByType text/css "access plus 12 hours"
   ExpiresByType text/javascript "access plus 7 days"
