--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 title: Heinrich Reimer
 description: Android development with love.
 license: All rights reserved.
-# url: https://heinrichreimer.github.io
-url: https://heinrichreimer.com # TODO Use in production
+# url: https://heinrichreimer.github.io # Use in development
+url: https://heinrichreimer.com
 author:
   name: Heinrich Reimer
   adress:
@@ -25,16 +25,15 @@ author:
     - http://stackoverflow.com/users/2037482/heinrich
 image:
   logo: /assets/images/logos/logo_brand.png
-  # TODO Update images below
-  default: /assets/images/logos/logo_brand.png
-  # twitter: /assets/images/banners/twitter.png
-  # facebook: /assets/images/banners/facebook.png
-  # google_plus: /assets/images/banners/facebook.png
+  default: /res/images/social/social_facebook.png
+  twitter: /res/images/social/social_twitter.png
+  facebook: /res/images/social/social_facebook.png
+  google_plus: /res/images/social/social_google_plus.png
 webmaster_verifications:
   google: 5mySK6jpuoQ7RT2vFF-GKGFtb4FWZwxLZ4aBcLwvUdw
   bing: 3653BD8AC68D24520E97C345142CC6FA
-# host: github
-host: uberspace # TODO Use in production
+# host: github # Use in development
+host: uberspace
 keywords:
 - Android
 - Development
