--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
   "name": "heinrichreimer.github.io",
-  "homepage": "heinrichreimer.github.io",
+  "homepage": "https://github.com/HeinrichReimer/heinrichreimer.github.io",
   "authors": [
-    "Heinrich Reimer <heinrich@heinrichreimer.com>"
+    "Jan Heinrich Reimer <heinrich@heinrichreimer.com>"
   ],
   "description": "Heinrich Reimer Software Portfolio",
   "main": "index.html",
@@ -26,18 +26,18 @@
   ],
   "dependencies": {
     "app-layout": "PolymerElements/app-layout#^0.10.6",
+    "iron-grid": "The5heepDev/iron-grid",
     "iron-icons": "PolymerElements/iron-icons#^1.2.0",
     "paper-button": "PolymerElements/paper-button#^1.0.14",
-    "paper-card": "PolymerElements/paper-card#^1.1.4",
-    "paper-icon-button": "PolymerElements/paper-icon-button#^1.1.4",
-    "paper-item": "PolymerElements/paper-item#^1.2.1",
-    "paper-menu": "PolymerElements/paper-menu#^1.2.2",
-    "paper-toolbar": "PolymerElements/paper-toolbar#^1.1.7",
     "paper-drawer-panel": "PolymerElements/paper-drawer-panel#^1.0.11",
     "paper-header-panel": "PolymerElements/paper-header-panel#^1.1.7",
-    "iron-grid": "The5heepDev/iron-grid",
-    "re-captcha": "cbalit/re-captcha",
+    "paper-icon-button": "PolymerElements/paper-icon-button#^1.1.4",
     "paper-input": "PolymerElements/paper-input#^1.1.23",
-    "paper-toast": "PolymerElements/paper-toast#^1.3.0"
+    "paper-item": "PolymerElements/paper-item#^1.2.1",
+    "paper-toast": "PolymerElements/paper-toast#^1.3.0",
+    "paper-card": "PolymerElements/paper-card#^1.1.4",
+    "paper-toolbar": "PolymerElements/paper-toolbar#^1.1.7",
+    "re-captcha": "cbalit/re-captcha",
+    "paper-menu": "PolymerElements/paper-menu#^1.2.2"
   }
 }
