--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,7 @@ jobs:
         uses: peaceiris/actions-hugo@v2
         with:
           hugo-version: '0.59.1'
+          extended: true
       - name: Install Node
         uses: actions/setup-node@v1
         with:
