--- a/static/.htaccess
+++ b/static/.htaccess
@@ -1,5 +1,5 @@
 <If "%{HTTPS} != 'on' || %{HTTP_HOST} != 'heinrichreimer.com'">
-    Redirect / http://heinrichreimer.com/
+    Redirect / https://heinrichreimer.com/
 </If>
 
-ErrorDocument 404 http://heinrichreimer.com/404.html
+ErrorDocument 404 https://heinrichreimer.com/404.html
