--- a/assets/package.json
+++ b/assets/package.json
@@ -6,6 +6,7 @@
   "license": "UNLICENSE",
   "private": true,
   "dependencies": {
-    "normalize-scss": "^7.0.1"
+    "normalize-scss": "^7.0.1",
+    "@fortawesome/fontawesome-free": "^5.12.0"
   }
 }
