--- a/assets/package.json
+++ b/assets/package.json
@@ -1,7 +1,8 @@
 {
   "license": "SEE LICENSE IN ../LICENSE",
   "dependencies": {
-    "normalize-scss": "^7.0.1",
-    "@fortawesome/fontawesome-free": "^5.12.0"
+    "@fortawesome/fontawesome-free": "^5.12.0",
+    "cc-icons": "^1.0.0",
+    "normalize-scss": "^7.0.1"
   }
 }
