Change base URL

--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,5 @@
 title: Jan Heinrich Reimer
-baseURL: https://heinrichreimer.eu/
+baseURL: https://heinrich.reimer.family/
 
 defaultContentLanguage: en
 languages:
