--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,27 +1,32 @@
-name: CI
+# yaml-language-server: $schema=https://json.schemastore.org/github-workflow
+
+name: "CI"
 
 on: push
 
 jobs:
   build:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
     steps:
       - name: "📥 Check-out"
         uses: actions/checkout@v2
       - name: "🧰 Install Hugo"
         uses: peaceiris/actions-hugo@v2
         with:
-          hugo-version: 0.74.2
+          hugo-version: "0.80"
           extended: true
       - name: "🧰 Install Node"
         uses: actions/setup-node@v1
         with:
-          node-version: 8.16.x
-      - name: "🧰 Install Yarn"
-        run: npm install -g yarn
+          node-version: "14.15"
+      - name: "♻️ Cache dependencies"
+        uses: actions/cache@v2
+        with:
+          path: |
+            assets/node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('assets/yarn.lock') }}
       - name: "🧰 Install asset dependencies"
         run: |
-          cd assets
-          yarn install
+          yarn --cwd assets/ install
       - name: "🏗 Build"
         run: hugo
