--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,6 @@
-name: Create release
+# yaml-language-server: $schema=https://json.schemastore.org/github-workflow
+
+name: "Create release"
 
 on:
   push:
@@ -11,7 +13,7 @@ on:
 jobs:
   build:
     name: "🚀 Release"
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
     steps:
       - name: "📥 Check-out"
         uses: actions/checkout@v1
