--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,13 @@ jobs:
         with:
           hugo-version: "0.80.0"
           extended: true
+      - name: "♻️ Cache Hugo modules"
+        uses: actions/cache@v2
+        with:
+          path: /tmp/hugo_cache
+          key: ${{ runner.os }}-hugo-modules-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-hugomod-
       - name: "🧰 Install Node"
         uses: actions/setup-node@v2.1.5
         with:
@@ -25,8 +32,7 @@ jobs:
       - name: "♻️ Cache dependencies"
         uses: actions/cache@v2
         with:
-          path: |
-            assets/node_modules
+          path: assets/node_modules
           key: ${{ runner.os }}-node-${{ hashFiles('assets/yarn.lock') }}
       - name: "🧰 Install asset dependencies"
         run: |
