--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,6 +7,7 @@ updates:
       day: "monday"
       time: "09:00"
       timezone: "Europe/Berlin"
+    open-pull-requests-limit: 10
     assignees:
       - "heinrichreimer"
     reviewers:
@@ -18,6 +19,7 @@ updates:
       day: "monday"
       time: "09:00"
       timezone: "Europe/Berlin"
+    open-pull-requests-limit: 10
     assignees:
       - "heinrichreimer"
     reviewers:
