--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ hugo.exe
 hugo.darwin
 hugo.linux
 
+.hugo_build.lock
+
 ### JetBrains+all ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
