--- a/config.yml
+++ b/config.yml
@@ -30,6 +30,8 @@ params:
   colors:
     theme: "#052561"
     background: "#ffffff"
+  mail: heinrich@reimer.family
+  orcid: 0000-0003-1992-8696
   github:
     apiUrl: https://api.github.com/
     username: heinrichreimer
