--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,11 +1,44 @@
-# yaml-language-server: $schema=https://json.schemastore.org/github-workflow
-
 name: "CI"
 
 on: push
 
 jobs:
   build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: "📥 Check-out"
+        uses: actions/checkout@v2
+      - name: "🧰 Install Hugo"
+        uses: peaceiris/actions-hugo@v2
+        with:
+          hugo-version: "0.92"
+          extended: true
+      - name: "♻️ Cache Hugo modules"
+        uses: actions/cache@v2.1.4
+        with:
+          path: /tmp/hugo_cache
+          key: ${{ runner.os }}-hugo-modules-${{ hashFiles('**/go.sum') }}
+          restore-keys: ${{ runner.os }}-hugo-modules-
+      - name: "🧰 Install Node"
+        uses: actions/setup-node@v2
+        with:
+          node-version: "16.13"
+      - name: "♻️ Cache dependencies"
+        uses: actions/cache@v2.1.4
+        with:
+          path: assets/node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('**/yarn.lock') }}
+      - name: "🧰 Install asset dependencies"
+        run: yarn --cwd assets/ install
+      - name: "🏗 Build"
+        run: hugo
+        env:
+          HUGO_PARAMS_githubToken: ${{ secrets.GITHUB_TOKEN }}
+  deploy:
+    name: "📤 Deploy"
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+    needs:
+      - build
     runs-on: ubuntu-20.04
     steps:
       - name: "📥 Check-out"
@@ -13,28 +46,71 @@ jobs:
       - name: "🧰 Install Hugo"
         uses: peaceiris/actions-hugo@v2
         with:
-          hugo-version: "0.80.0"
+          hugo-version: "0.92"
           extended: true
       - name: "♻️ Cache Hugo modules"
         uses: actions/cache@v2.1.4
         with:
           path: /tmp/hugo_cache
           key: ${{ runner.os }}-hugo-modules-${{ hashFiles('**/go.sum') }}
-          restore-keys: |
-            ${{ runner.os }}-hugomod-
+          restore-keys: ${{ runner.os }}-hugo-modules-
       - name: "🧰 Install Node"
-        uses: actions/setup-node@v2.1.5
+        uses: actions/setup-node@v2
         with:
-          node-version: "14.15.4"
+          node-version: "16.13"
       - name: "♻️ Cache dependencies"
         uses: actions/cache@v2.1.4
         with:
           path: assets/node_modules
-          key: ${{ runner.os }}-node-${{ hashFiles('assets/yarn.lock') }}
+          key: ${{ runner.os }}-node-${{ hashFiles('**/yarn.lock') }}
       - name: "🧰 Install asset dependencies"
-        run: |
-          yarn --cwd assets/ install
+        run: yarn --cwd assets/ install
       - name: "🏗 Build"
         run: hugo
         env:
           HUGO_PARAMS_githubToken: ${{ secrets.GITHUB_TOKEN }}
+      - name: "🚀 Deploy to Uberspace"
+        uses: appleboy/scp-action@v0.1.1
+        with:
+          username: familie
+          host: charon.uberspace.de
+          key: ${{ secrets.DEPLOY_KEY }}
+          source: public
+          strip_components: 1
+          rm: true
+          target: ${{ secrets.DEPLOY_TARGET_PATH }}
+  release:
+    name: "🚀 Create GitHub release"
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+    needs:
+      - code-format
+      - lint
+      - unit-tests
+    runs-on: ubuntu-20.04
+    steps:
+      - name: "📥 Check-out"
+        uses: actions/checkout@v2
+      - name: "🏷️ Get version tag"
+        id: get-version
+        run: echo ::set-output name=tag::${GITHUB_REF/refs\/tags\//}
+      - name: "🧰 Install Python"
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+          cache: pip
+          cache-dependency-path: setup.cfg
+      - name: "🧰 Install dependencies"
+        run: |
+          python -m pip install --upgrade pip build
+          pip install -e .
+      - name: "🏗️ Build Python wheel"
+        run: python -m build
+      - name: "🚀 Create GitHub release"
+        uses: softprops/action-gh-release@v1
+        with:
+          name: Release ${{ steps.get-version.outputs.tag }}
+          files: dist/*
+          fail_on_unmatched_files: true
+          draft: false
+          prerelease: false
+          generate_release_notes: true
